# CorpusForge

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  restart.sh  start_server.sh
frontend/: app.js  index.html  style.css
src/corpusforge/: __init__.py  app.py  cli.py  models.py  server.py
src/corpusforge/cleaners/: __init__.py  advanced_pii_cleaner.py  heuristic_cleaner.py  intra_dedup.py  ocr_cleaner.py  structural_cleaner.py  unicode_cleaner.py  whitespace_cleaner.py
src/corpusforge/dedup/: __init__.py  deduplicator.py  exact_dedup.py  minhash_dedup.py
src/corpusforge/filters/: __init__.py  language_filter.py  length_filter.py  quality_filter.py  repetition_filter.py
src/corpusforge/loaders/: __init__.py  base.py  pdf_loader.py  txt_loader.py
src/corpusforge/output/: __init__.py  formatter.py
tests/: test_app.py  test_cleaners.py  test_cli.py  test_dedup.py  test_filters.py  test_loaders.py  test_output.py
