[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backend.lagacy:build"

[project]
name = "CorpusForge"
version = "0.1.0"
description = " Clean text corpora for AI application"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Parveen Birthlia", email ="parveenbirthlia@gmail.com"}]
dependencies = ["tqdm>=4.66"]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
pdf     = ["PyMuPDF>=1.23"]
html    = ["beautifulsoup4>=4.12", "lxml>=4.9"]
filters = ["langdetect>=1.0", "nltk>=3.8"]
dedup   = ["datasketch>=1.6"]
ui      = ["gradio>=4.15"]
dev     = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.4"]
all     = [
    "PyMuPDF>=1.23",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "langdetect>=1.0",
    "nltk>=3.8",
    "datasketch>=1.6",
    "gradio>=4.15",
]

[tool.pytest.ini_options]
testpaths = ["tests]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 88                  # Same as black formatter
target-version = "py39"           # Minimum Python target
select = ["E", "F", "I", "UP"]  # Error, pyflakes, isort, pyupgrade

[tool.ruff.lint.isort]
known-first-party = ["corpusforge"]