[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "CorpusForge"
version = "0.3.0"
description = "A professional-grade hybrid NLP corpus cleaning pipeline for AI/NLP workloads."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Parveen Birthalia", email = "parveenbirthalia@gmail.com"}]
keywords = ["nlp", "corpus", "cleaning", "deduplication", "text-processing", "ai", "llm"]
dependencies = [
    "tqdm>=4.66",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
pdf     = ["PyMuPDF>=1.23"]
filters = ["langdetect>=1.0"]
dedup   = ["datasketch>=1.6"]
ml      = ["spacy>=3.7", "symspellpy>=6.7"]
api     = ["fastapi", "uvicorn", "python-multipart"]
ui      = ["gradio>=4.15"]
dev     = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.4"]
all     = [
    "PyMuPDF>=1.23",
    "langdetect>=1.0",
    "datasketch>=1.6",
    "spacy>=3.7",
    "symspellpy>=6.7",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "gradio>=4.15",
]

[project.scripts]
corpusforge = "src.corpusforge.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.ruff]
line-length    = 88
target-version = "py310"
select         = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["corpusforge"]